Bug 460802 - NeoChat froze for a minute or so when I sent a large markdown-formatted block of text
Summary: NeoChat froze for a minute or so when I sent a large markdown-formatted block...
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-21 13:12 UTC by Nate Graham
Modified: 2022-10-23 22:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-10-21 13:12:31 UTC
Everything KDE from git master.


STEPS TO REPRODUCE
Paste the following text into the text field and hit Enter:

## XXXXX-related
* Reviewed all new merge requests in Plasma-aligned software, prioritizing merge requests from colleagues for work XXXXX is explicitly sponsoring
* Triaged all new bug reports every day for KDE software that ships on the XXXXXXXXXX
* Multiscreen QA and testing

Plasma work merged this week:
* Fix issue submitting reviews in Discover with certain backends: https://invent.kde.org/plasma/discover/-/merge_requests/393
* Make widgets' middle-clickability obvious: https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2205 + https://invent.kde.org/plasma/bluedevil/-/merge_requests/101 + https://invent.kde.org/plasma/plasma-pa/-/merge_requests/143
* Generally Improve UX and comprehensibility of Icons KCM size sheet: https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2214

WIP Plasma work submitted this week:
* By default, allow dragging windows between desktops using screen edges: https://invent.kde.org/plasma/kwin/-/merge_requests/3065
* Improve context for OARS strings in Discover: https://invent.kde.org/plasma/discover/-/merge_requests/382

..And various other smaller things.

## Non-XXXXX-related:
* Wrote the weekly blog post
* Wrote https://community.kde.org/Distributions/Packaging_Recommendations to help distros ship better Plasma experiences
* Update descriptions for Partition Manager and Filelight: https://invent.kde.org/system/partitionmanager/-/merge_requests/27 + https://invent.kde.org/utilities/filelight/-/merge_requests/56


OBSERVED RESULT
NeoChat freezes for about a minute, but eventually does send the text.


EXPECTED RESULT
NeoChat sends the text immediately, as Element does.
Comment 1 Bug Janitor Service 2022-10-23 18:53:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/572
Comment 2 Tobias Fella 2022-10-23 22:10:59 UTC
Git commit 510c6d4a908410fc4ae2042589daa328f07c36c8 by Tobias Fella.
Committed on 23/10/2022 at 22:10.
Pushed by tfella into branch 'master'.

Don't freeze when pasting large markdown documents

M  +8    -1    src/chatdocumenthandler.cpp

https://invent.kde.org/network/neochat/commit/510c6d4a908410fc4ae2042589daa328f07c36c8