Don't freeze when pasting large markdown documents

BUG: 460802